--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack-dev-server": "2.1.0-beta.0"
   },
   "dependencies": {
+    "minimist": "^1.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
