--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "uikit",
   "version": "0.1.0",
   "description": "React component kitchen sink for documentation and prototyping.",
-  "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "babel --no-babelrc --copy-files scripts --out-dir dist --presets=es2015,react,stage-2"
   },
+  "bin": {
+    "uikit": "bin/uikit.js"
+  },
+  "preferGlobal": true,
   "repository": "https://github.com/sdelrio0/uikit",
   "author": "Sergio del Rio (@sdelrio0)",
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.24.0",
     "babel-core": "6.13.2",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.13.2",
